# DAY-SHIFT

./: .gitignore  Day_Shift_Audit_Report.docx  capacitor.config.ts  dayshift-landing.html  db.py  index.html  package.json  pyproject.toml  seed.py  seed_data.py  seed_demo.py  tasks.json  vite.config.ts
.github/workflows/: build-apk.yml
.workshop/: context.md
android/app/: build.gradle
plans/: 2026-06-01_12-00-00_fix-button-overlap-profile-size.md
plans/2025-05-28_support_messaging/: tasks.json
plans/2026-05-28_publish_blockers/: tasks.json
plans/2026-06-01_10-features/: plan.md
plans/for-sale-post-type/: tasks.json
public/: manifest.json  sw.js
routes/: admin.py  advertiser.py  ai.py  app.py  auth.py  blocks.py  bookmarks.py  chat.py  deps.py  email_utils.py  embed_utils.py  external_data.py  import_url.py  legal.py  matches.py  models.py  moderation.py  paypal.py  push.py  reports.py  sanitize.py  sponsors.py  support.py  tips.py  upload.py  users.py  videos.py  webhooks.py
scripts/: backfill_uploads.py  fix_seed_data.py  gen_promo_mobile.py  gen_promo_social.py  generate_seed_data.py
src/: App.tsx  index.css  main.tsx  types.ts
tasks/: 2026-06-08_launch-readiness.json  admin_dashboard.json  ai_audit.json  data_cleanup.json  edge_case_validation.json  latency_guard.json  moderation_system.json  remove_tips.json  restore_app.json  security_audit.json  unit_tests.json
tests/: __init__.py  test_ai_features.py
uploads/: 36aa7a3b-5198-4eb3-9f82-fcf043994b19.webm  93c423ef-cb15-40b6-8637-e32cf751ff64.webm  db179cac-c108-4684-924b-7884f150ed47.webm
(+36 files in other folders)
