[project]
name = "day-shift-marketplace"
version = "0.1.0"
description = "Day Shift — video-first hospitality gig marketplace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
    "httpx==0.28.1",
    "python-multipart==0.0.22",
    "watchfiles==1.1.1",
    "psycopg2-binary>=2.9.9",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "aiofiles>=23.2.1",
    "imageio-ffmpeg>=0.6.0",
    "qrcode[pil]>=8.2",
    "stripe>=15.1.0",
    "feedparser>=6.0.12",
    "openpyxl>=3.1.5",
    "slowapi>=0.1.9",
    "resend>=2.30.1",
    "pywebpush>=2.3.0",
    "sentry-sdk>=2.60.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
    "playwright>=1.60.0",
]

[tool.uv]
exclude-newer = "14 days"
